--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -138,7 +138,7 @@
         <div class="tab-content">
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-left: 10px;">
                 <li class="nav-item">
-                    <a class="nav-link" id="applyMessage-tab" data-toggle="tab" href="#applyMessage" role="tab"
+                    <a class="nav-link active" id="applyMessage-tab" data-toggle="tab" href="#applyMessage" role="tab"
                         aria-controls="applyMessage" aria-selected="false">志愿者申请</a>
                 </li>
                 <li class="nav-item">
