feat(web): add load

--- a/webapp/backend/app/templates/base.html
+++ b/webapp/backend/app/templates/base.html
@@ -176,8 +176,10 @@
         <!-- ============================================================== -->
         <!-- Page wrapper  -->
         <!-- ============================================================== -->
+        <div id="main">
         {% block page %}
         {% endblock %}
+        </div>
         <!-- ============================================================== -->
         <!-- End Page wrapper  -->
         <!-- ============================================================== -->
