--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -73,7 +73,7 @@
                                                     alt="../static/img/myactivity/thu2.jpeg">
                                                 <button class="btn btn-lg btn-info btn-block">招募公告</button>
                                                 <button class="btn btn-lg btn-primary btn-block">导入成员</button>
-                                                <button class="btn btn-lg btn-secondary btn-block">申请结项</button>
+                                                <button class="btn btn-lg btn-secondary btn-block" onclick="$('#assign{{activity.id}}').modal('toggle')">申请结项</button>
                                             </div>
                                         </div>
                                         <div class="col-sm-7">
