--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -139,7 +139,7 @@
             <ul class="nav nav-tabs" id="myTab" role="tablist" style="padding-left: 10px;">
                 <li class="nav-item">
                     <a class="nav-link active" id="applyMessage-tab" data-toggle="tab" href="#applyMessage" role="tab"
-                        aria-controls="applyMessage" aria-selected="false">志愿者申请</a>
+                        aria-controls="applyMessage" aria-selected="true">志愿者申请</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="managerMessage-tab" data-toggle="tab" href="#managerMessage" role="tab"
